# Cocoa

./: .dockerignore  .env.example  .gitignore  BEST_PRACTICES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPROVEMENT_REPORT_2025.md  CONTRIBUTING.md  DEPLOYMENT.md  FEATURE_AUDIT.md  FIX_REPORT.md  HANDOFF_INSTRUCTIONS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_REPORT_2025.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_REPORT.md  IMPROVEMENT_SUMMARY_2025.md  LICENSE  PRODUCT_ASSESSMENT.md  README.md  README_PERSONAL.md  SECURITY.md  cocoa_dependency_analysis.json  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt  run_tests.py  run_tests_new.py  setup_personal.py  setup_security.py  test_integration_2025.py
.claude/: settings.local.json
artifacts/: feature-audit.html
config/: config.json  database.json  streaming.json  test_runner_template.json
docker/: Dockerfile  frontend.Dockerfile  prometheus.yml
docs/: API_REFERENCE.md  CATEGORY_RESEARCH.md  CODE_FULL_CHECK_GUIDE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  IMPROVEMENT_BACKLOG.md  IMPROVEMENT_ROADMAP.md  PRODUCT_CATEGORY_MAP.md  QUICK_START.md  README.md  SPEC_ASYNC_BASE.md  SPEC_AVATAR_PARAMETERS.md  SPEC_BATCH_VALIDATOR.md  SPEC_CACHE_MANAGER.md  SPEC_CONFIG.md  SPEC_CONFIG_VALIDATOR.md  SPEC_DEPENDENCY_INJECTION.md  SPEC_DISASTER_RECOVERY.md  SPEC_ENHANCED_DISASTER_RECOVERY.md  SPEC_GENERATE_LANGUAGES.md  SPEC_GLOBAL_EDGE_MANAGER.md  SPEC_GRAFANA_INTEGRATION.md  SPEC_HEALTH_CHECKER.md  SPEC_HEALTH_MONITOR.md  SPEC_I18N.md  SPEC_JOINT_RANGE_REPORT.md  SPEC_LANGUAGE_SCRIPTS.md  SPEC_LOGGING_CONFIG.md  SPEC_PERFORMANCE_MONITOR.md  SPEC_PERF_LOG_VIEWER.md  SPEC_PRESET_HISTORY.md  SPEC_PRESET_PARAMETERS.md  SPEC_REDIS_CACHE_MANAGER.md  SPEC_SECRET_MANAGER.md  SPEC_SECURITY_SCANNER.md  SPEC_SERVICES_CONFIG.md  SPEC_TEMPLATE_LIBRARY.md  SPEC_VALIDATE_AND_REPAIR_PRESETS.md  SPEC_VRCHAT_ANALYZER.md  SPEC_VRCHAT_ANALYZER_V2.md  (+4 more)
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
launch/: run_cocoa.bat  run_cocoa.sh
locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
main/: DATA_SECURITY_README.md  README_STRUCTURE.md  USER_GUIDE.md  advanced_security_2025.py  ai_avatar_generator.py  ai_avatar_gui.py  api_integration.py  api_server.py  ar_cloud_manager.py  async_base.py  auth_manager.py  avatar_agent.py  avatar_collections.py  avatar_marketplace.py  avatar_mover.py  avatar_parameter_editor.py  avatar_parameter_sets.py  avatar_parameters.py  avatar_performance_monitor.py  avatar_personality_tuner.py  avatar_preset_diff.py  avatar_preset_linker.py  avatar_preset_linker_gui.py  avatar_video_creator.py  backup_cloud_sync.py  bci_manager.py  billing_service.py  blockchain_audit.py  config.py  (+92 more)
(+280 files in other folders)
