[project]
name = "cocoa"
version = "1.0.0"
description = "Avatar Management Platform with Enterprise Security"
requires-python = ">=3.8"
authors = [
    {name = "Cocoa Team"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "sqlalchemy>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "pylint>=3.0.0",
    "ruff>=0.1.0",
    "sphinx>=7.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
show_error_codes = true
show_error_context = true

# 段階的typing対応（最初は厳しくない）
[[tool.mypy.overrides]]
module = [
    "main.performance_monitor",
    "main.metaverse_integration",
    "main.api_server",
]
ignore_errors = true  # 既存の大規模ファイルは段階的対応

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--cov=main",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "security: marks tests as security-related",
    "asyncio: marks tests as asynchronous",
]

[tool.coverage.run]
source = ["main"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ASYNC", "I", "RUF100"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
